# DictionShellcode

./: DictionShellcode.py  README.md  english-words.txt
Payload-CSharp/: CSharp_DictionShellcode-FromFile.cs  CSharp_DictionShellcode.cs
Payload-Cplusplus_Cl/: CPP_DictionShellcode.cpp  compile.bat
Payload-Rust/: Cargo.toml
Payload-Rust/src/: main.rs
