# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "DictionShellcode"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.62.2"
features = ["Win32_Foundation", "Win32_System_Memory"]

[dependencies.windows-sys]
version = "0.61.1"
features = ["Win32_System_Threading", "Win32_System_Memory", "Win32_Foundation", "Win32_Security",]